--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,6 +21,11 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :images %>
+    <%= form.file_field :images, multiple: true, class: 'form-control' %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
