Se agregan datos al seeds.rb con faker y se implementa postulations.

--- a/app/views/joboffers/show.html.erb
+++ b/app/views/joboffers/show.html.erb
@@ -2,6 +2,9 @@
 
 <%= render @joboffer %>
 
+<%= render "postulations/form" %>
+
+
 <div>
   <%= link_to "Edit this joboffer", edit_joboffer_path(@joboffer) %> |
   <%= link_to "Back to joboffers", joboffers_path %>
